Feature #13271
Migrate Silverpeas Core Web to JakartaEE 10.

Add the previously removed social network objects in Silverpeas Core Library to ensure the Silverpeas Core Web works.

Refactor I18n to be a class and a managed bean instead of an interface. I18NHelper doesn't extend it anymore but wraps it; its goal is to give a static access some of the I18n's methods.

Fix database creation script in Silverpeas Core Web Test API.